--- a/Index.org
+++ b/Index.org
@@ -39,7 +39,7 @@ Vascular surgery is a specialized field focusing on diseases of the vascular sys
 https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Arterial_tree_body.jpg
 
 #+REVEAL: split
-#+ATTR_REVEAL:
+#+ATTR_REVEAL: :frag (grow)
 - Carotid Arteries
 - Abdominal Aorta
 - Peripheral Arteries
@@ -51,13 +51,19 @@ https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images
 #+ATTR_HTML: :width 35% :align left
 https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Vasc%20Biol%20Atheroma.jpg
 
-#+ATTR_REVEAL: :frag (grow)
+#+ATTR_REVEAL: :frag (fade-left)
 - Endothelial Cells
 - Smooth Muscle Cells
 - Pericytes
 - Fibroblasts
-- Adult Stem (Progenitor) Cells
-- Haematopoetic System derived Cells
+- Haematopoetic System derived Cells:
+#+ATTR_REVEAL: :frag (fade-left)
+  - Lymphocytes
+  - Granulocytes
+  - Macrophages
+  - Platelets
+  - Erythrocytes
+  - Adult Stem (Progenitor) Cells
 *** Atherosclerosis
 *** Intimal Hyperplasia
 ** Diagnostic Evaluation
