--- a/Index.org
+++ b/Index.org
@@ -44,11 +44,12 @@ https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images
 - Carotid Arteries
 - Abdominal Aorta
 - Peripheral Arteries
-** Pathophysiology
+* Pathophysiology of Arterial Disease
 #+ATTR_REVEAL: :frag (fade-left)
 - Not enough blood = Occlusive Arterial Disease
 - Too much blood = Aneurysmal Arterial Disease and Trauma
-*** Arterial Vascular Cells
+#+REVEAL: split
+** Arterial Vascular Cells
 #+ATTR_HTML: :width 35% :align left
 https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Vasc%20Biol%20Atheroma.jpg
 
@@ -65,20 +66,21 @@ https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images
   - Platelets
   - Erythrocytes
   - Adult Stem (Progenitor) Cells
-*** Atherosclerosis
-*** Intimal Hyperplasia
-** Diagnostic Evaluation
-#+ATTR_REVEAL: :frag (fade-left)
-- Clinical History & Examination
-- Imaging Techniques
-*** History and Clinical Examination
+** Intimal Hyperplasia
+** Atherosclerosis
+* Arterial Trauma
+#+Caption: The 'Wound man' from an English anatomical treatise.; The 'wound man' is a figure found in a number of manuscripts and printed books produced in the 15th and 16th centuries. The artist has evidently detailed the weaponry with loving care and this wound man is remarkable for its concentration of wounds inflicted by violent assault. (The Wellcome Collection https://www.jstor.org/stable/community.24729344)
+#+ATTR_HTML: :width 33% :align left
+https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/Pseudo%20Galen%20Woundman.jpg
+
+* History and Examination
 #+ATTR_HTML: :width 70%
 @@html:<center>@@
 https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/History%20Taking%20Chatbot.jpg
 *** The Handheld Doppler
 @@html:<center><video controls width="1200" height=auto src="https://filedn.eu/lb297pjeroJ5OLJWy2IKwmV/ARU%20Presentation%20Feb%202025/Images_ARU_vascular1/HD%20Doppler%20Waveforms_1.mp4"></video>@@
 
-** Surgical Intervention
+* Surgical Intervention
 #+ATTR_REVEAL: :frag (fade-left)
 - Open Surgical Approaches
 - Endovascular techniques
